[package]
edition = '2021'
name = "gearbox-maintenance"
version = "0.0.2-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/gearbox-maintenance"
readme = "README.md"
description = "A maintenance + old-data deletion tool for Transmission"
documentation = "https://docs.rs/gearbox-maintenance"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
transmission-rpc = "0.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
chrono = "0.4.27"
url = "2.4.1"
parse_duration = "2.1.1"
enum-kinds = "0.5.1"
prometheus = "0.13.3"
prometheus-hyper = "0.1"
futures = "0.3.28"
once_cell = "1.18.0"
hhmmss = "0.1.0"
serde = "*"
rhai = { version = "1.15.1", features = ["serde"] }

[dependencies.clap]
features = ["derive"]
version = "4.4.1"

[dev-dependencies]
test-case = "3.1.0"
test-log = { version = "0.2.12", features = ["trace"], default-features = false }
tempfile = "3.8.0"
