[package]
edition = '2021'
name = "gearbox-maintenance"
version = "0.0.2-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/gearbox-maintenance"
readme = "README.md"
description = "A maintenance + old-data deletion tool for Transmission"
documentation = "https://docs.rs/gearbox-maintenance"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
transmission-rpc = "0.4.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.93"
chrono = "0.4.38"
url = "2.5.3"
parse_duration = "2.1.1"
enum-kinds = "0.5.1"
prometheus = "0.13.4"
prometheus-hyper = "0.2"
futures = "0.3.31"
once_cell = "1.20.2"
hhmmss = "0.1.0"
serde = "*"
# For rhai, we have to exclude ahash for now, as that pins getrandom
# at a version incompatible with the latest rustls bug fixes:
rhai = { version = "1.20.0", features = ["serde", "std"], default_features = false }

[dependencies.clap]
features = ["derive"]
version = "4.5.21"

[dev-dependencies]
test-case = "3.3.1"
test-log = { version = "0.2.16", features = ["trace"], default-features = false }
tempfile = "3.14.0"
